--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -419,6 +419,13 @@ body.mobile
   #bs-navbar-collapse-1
     margin-left: 3px
 
+  .navbar + .navbar
+    top: 55px
+    padding: 0
+
+    .navbar-nav
+      margin: 0.5em;
+
   #places_results
     margin-top: 20px
 
