--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -234,9 +234,9 @@
   height: 100%
   object-fit: cover
 
-.map-image > div.col-sm-6:first-child
+.map-image > div.col-6:first-child
   padding-right: 0
 
-.map-image > div.col-sm-6:last-child
+.map-image > div.col-6:last-child
   padding-left: 0
 
