--- a/app/views/places/mobile/_index.html.erb
+++ b/app/views/places/mobile/_index.html.erb
@@ -12,7 +12,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-12">
         <%= link_to(t('buttons.cancel'), [:map, mobile: @mobile], remote: true, class: 'btn btn-light btn-outline-secondary') %>
       </div>
