--- a/app/views/places/mobile/_results.html.erb
+++ b/app/views/places/mobile/_results.html.erb
@@ -21,7 +21,7 @@
           <% else %>
             <%= place.properties['_title_'].split(', ')[-1] %>
           <% end %>
-          <span class="badge rounded-pill bg-secondary"><i class="fas fa-chevron-right"></i></span>
+          <span class="badge rounded-pill bg-secondary float-end"><i class="fas fa-chevron-right"></i></span>
         <% end %>
       <% end -%>
     </div>
