--- a/app/views/maps/_mobile.html.erb
+++ b/app/views/maps/_mobile.html.erb
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="navbar-nav">
         <li class="nav-item">
           <%= link_to(new_request_path(mobile: @mobile), remote: true, class: 'nav-link', title: t("nav.request")) do %>
             <i class="fas fa-map-marker-alt"></i>
@@ -38,11 +38,11 @@
           </li>
         <% end -%>
         <% if !login_required? -%>
-          <li class="menu-hamburger">
+          <li class="float-end">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a data-bs-toggle="collapse" data-bs-target="#navbar" href"#">
+            <a data-bs-toggle="collapse" data-bs-target="#navbar" href"#" class="nav-link">
               <i class="fas fa-bars"></i>
             </a>
           </li>
@@ -50,33 +50,39 @@
       </ul>
     </div>
   </div>
-  <div class="collapse" aria-expanded="false" id="navbar">
-    <ul class="nav">
-      <li>
-        <a href="<%= imprint_static_path %>" class="imprint" title="<%= t("nav.imprint") %>" target="_blank">
-          <i class="fas fa-user"></i>
-          <span><%= t("nav.imprint") %></span>
-        </a>
-      </li>
-      <li>
-        <% privacy_link = if Settings::Url.respond_to?(:external_privacy_url)
-                            Settings::Url.external_privacy_url
-                          else
-                            privacy_static_path
-                          end %>
-        <a href="<%= privacy_link %>" class="privacy" title="<%= t("nav.privacy") %>" target="_blank">
-          <i class="fas fa-lock"></i>
-          <span><%= t("nav.privacy") %></span>
-        </a>
-      </li>
-    </ul>
-  </div>
 </nav>
+<% if !login_required? -%>
+  <nav class="navbar navbar-light bg-light fixed-top">
+    <div class="container">
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item d-block text-start">
+            <a href="<%= imprint_static_path %>" class="imprint nav-link" title="<%= t("nav.imprint") %>" target="_blank">
+              <i class="fas fa-user"></i>
+              <span><%= t("nav.imprint") %></span>
+            </a>
+          </li>
+          <li class="nav-item d-block text-start">
+            <% privacy_link = if Settings::Url.respond_to?(:external_privacy_url)
+                                Settings::Url.external_privacy_url
+                              else
+                                privacy_static_path
+                              end %>
+            <a href="<%= privacy_link %>" class="privacy nav-link" title="<%= t("nav.privacy") %>" target="_blank">
+              <i class="fas fa-lock"></i>
+              <span><%= t("nav.privacy") %></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+<% end -%>
 <div class="modal fade" id="flash" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
   <div class="modal-dialog"><div class="modal-content"></div></div>
 </div>
 <div id="ol-map" class="ol-map-mobile">
-  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-bottom actions hidden">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-bottom actions invisible">
   </nav>
 </div>
 <% if @mobile && !login_required? -%>
