--- a/app/views/requests/mobile/_popup.html.erb
+++ b/app/views/requests/mobile/_popup.html.erb
@@ -6,7 +6,7 @@
   </h4>
   <div class="col-12">
     <%= link_to('#', id: 'open-request', data: { url: request_path(@request.id, mobile: @mobile)}) do %>
-      <i class="fas fa-eye"></i>
+      <i class="fas fa-eye my-3 ms-2 fs-3"></i>
     <% end -%>
 
     <% type = t(@request.service.type, scope: 'service.types', count: 1) %>
