Demo im Footer deaktivieren, wenn keine URL vorhanden ist

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,9 @@
             <div class="text-center">
               <%= link_to t(:mobile), [:start, mobile: true], data: { turbolinks: false } %> |
               <%= link_to t(:api), [:api, :static] %> |
-              <%= link_to t(:demo), Settings::Url.ks_demo_url, data: { turbolinks: false }, target: "_blank" %> |
+              <% if Settings::Url.ks_demo_url.present? -%>
+                <%= link_to t(:demo), Settings::Url.ks_demo_url, data: { turbolinks: false }, target: "_blank" %> |
+              <% end -%>
               <%= link_to t(:github), Settings::Url.ks_github_url, data: { turbolinks: false }, target: "_blank" %> |
               <%= link_to t(:promotion), [:promotion, :static] %>
             </div>
