--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -1,10 +1,10 @@
 <% content_for :nav do -%>
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a href="#request" id="requests" class="nav-link active" data-bs-toggle="tab" class="header-tab" data-url="<%= requests_path %>"><%= t('.request') %></a>
+      <a href="#request" id="requests" class="nav-link active header-tab" data-bs-toggle="tab" data-url="<%= requests_path %>"><%= t('.request') %></a>
     </li>
     <li class="nav-item">
-      <a href="#watch" id="areas" class="nav-link" data-bs-toggle="tab" class="header-tab" data-url="<%= areas_path %>"><%= t('.watch') %></a>
+      <a href="#watch" id="areas" class="nav-link header-tab" data-bs-toggle="tab" data-url="<%= areas_path %>"><%= t('.watch') %></a>
     </li>
   </ul>
 <% end -%>
