ol-Update: Zwischenstand

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -25,6 +25,7 @@
 #= require shariff.complete
 #= require_self
 #= require_tree .
+#= require ol
 #= require ol3-ext
 #= require d3-v4
 #= require billboard
