--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require OpenLayers
+ *= require ol
  *= require jquery-ui/theme
  *= require shariff.complete
  *= require_tree .
