ol3-ext durch ol-ext ausgetauscht

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -24,11 +24,11 @@
 #= require proj4js
 #= require shariff.complete
 #= require_self
-#= require_tree .
 #= require ol
-#= require ol3-ext
+#= require ol-ext
 #= require d3-v4
 #= require billboard
+#= require_tree .
 
 window.KS ||= {}
 
