--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -2,6 +2,7 @@ KS.projection = ->
   if typeof proj4 is 'function'
     proj4.defs 'EPSG:25833', '+proj=utm +zone=33 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
     proj4.defs 'urn:ogc:def:crs:EPSG::25833', proj4.defs('EPSG:25833')
+    ol.proj.proj4.register proj4
     projection_25833 = ol.proj.get 'EPSG:25833'
     projection_25833.setExtent <%= Settings::Map.mv_bbox_25833 %>
     return projection_25833
@@ -340,10 +341,7 @@ class KS.Layers
               origin: layer.tilegrid_origin
               resolutions: layer.resolutions
               matrixIds: layer.matrix_ids
-            attributions: [
-              new ol.Attribution
-                html: layer.attribution
-            ] if layer.attribution?
+            attributions: if layer.attribution? then 'layer.attribution' else null
           visible: layer.visible
     for layer in <%= Settings::Map.wms_layers.to_json %>
       do (layer, @layers) ->
@@ -449,6 +447,7 @@ class KS.FeatureVector
     return vector = new ol.source.Vector
       format: new ol.format.TopoJSON
       loader: (extent, resolution, projection) ->
+        console.log('LOAD', extent)
         extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
         new KS.FeatureData(controller, extent, vector, is_request)
 
@@ -457,10 +456,10 @@ class KS.FeatureData
   constructor: (controller, extent, vector, is_request = false) ->
     controller = KS.generatePath() if is_request
     extent = ol.proj.transformExtent(extent, KS.projection(), KS.projectionWGS84)
-    wgs84Sphere = new ol.Sphere(6378137)
+    wgs84Sphere = ol.geom.Polygon.circular(ol.extent.getCenter(extent), 6378137)
     $.ajax(url: controller, dataType: 'json', data: {
       center: ol.extent.getCenter(extent),
-      radius: wgs84Sphere.haversineDistance(ol.extent.getBottomLeft(extent), ol.extent.getCenter(extent))
+      radius: ol.sphere.getDistance(ol.extent.getBottomLeft(extent), ol.extent.getCenter(extent))
     }).done (response) ->
       features = new Array
       $.each response, (index, elem) ->
