--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -225,8 +225,8 @@ $ ->
 
 KS.reloadFeatures= () ->
   extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
-  KS.layers.findById('features').getSource().getSource().clear(true)
+  KS.layers.findById('features').getSource().getSource().refresh()
   if KS.login_required && KS.getUrlParam('mobile')
-    KS.layers.findById('jobs').getSource().getSource().clear(true)
+    KS.layers.findById('jobs').getSource().getSource().refresh()
   extent = KS.olHeatmap.getView().calculateExtent(KS.olHeatmap.getSize())
-  KS.HeatmapLayers.findById('heatmap').getSource().clear(true)
+  KS.HeatmapLayers.findById('heatmap').getSource().refresh()
