Antworttexte werden vom Backoffice übernommen und dem User angezeigt (#43)
https://github.com/bfpi/klarschiff-backoffice/pull/179

Co-authored-by: rvoss <voss@bfpi.de>

--- a/app/views/application/desktop/_create.html.erb
+++ b/app/views/application/desktop/_create.html.erb
@@ -4,7 +4,10 @@
   </div>
   <div class="row mb-3">
     <div class="col-12">
-      <%= t("#{ controller_name }.#{ context }.create.success") %> <%= t(:share_request) if options && options[:id] %>
+      <% if options -%>
+        <%= options.fetch :create_message, t("#{ controller_name }.#{ context }.create.success") %>
+        <%= t(:share_request) if options[:id] %>
+      <% end -%>
     </div>
     <% if options && options[:id] -%>
       <div class="col-12">
