--- a/app/views/requests/desktop/_show.html.erb
+++ b/app/views/requests/desktop/_show.html.erb
@@ -67,12 +67,10 @@
         <% options = { remote: true, class: 'btn btn-primary', role: :button } -%>
         <div class="row">
           <div class="d-grid gap-2">
-            <% if display?(:votes) -%>
-              <%= link_to(t('.actions.vote'), [:new, @request, :vote, id_list: @id_list], options) if display?(:votes) %>
-            <% end -%>
-            <% if display?(:abuses) -%>
-              <%= link_to(t('.actions.abuse'), [:new, @request, :abuse, id_list: @id_list], options) if display?(:abuses) %>
-            <% end -%>
+            <%= link_to(t('.actions.vote'), [:new, @request, :vote, id_list: @id_list], options) if display?(:votes) %>
+            <%= link_to(t('.actions.abuse'), [:new, @request, :abuse, id_list: @id_list], options) if display?(:abuses) %>
+            <%= link_to(t('.actions.completion'), [:new, @request, :completion, id_list: @id_list, mobile: @mobile],
+                      options) if display?(:completions, @request) %>
             <%= link_to(t('.actions.comment'), [:new, @request, :comment, id_list: @id_list],
                         options.merge(class: 'btn btn-primary')) if display?(:create_comment) %>
           </div>
