--- a/app/views/completions/mobile/_new.html.erb
+++ b/app/views/completions/mobile/_new.html.erb
@@ -1,20 +1,14 @@
-<div class="abuse">
+<div class="completion">
   <div class="card">
     <div class="card-header">
       <%= t('.title') %>
     </div>
     <div class="card-body">
-      <%= form_for([:request, @abuse], remote: true) do |f| %>
+      <%= form_for([:request, @completion], remote: true) do |f| %>
         <%= hidden_field_tag :mobile, @mobile %>
         <div class="row mb-3">
           <div class="col-12"><%= t('.hint.text') %></div>
           <div class="col-12"><em class="text-danger"><%= t('.hint.warning') %></em></div>
-        </div>
-        <div class="form-group mb-3">
-          <div class="input-group">
-            <span class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
-            <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.abuse')) %>
-          </div>
         </div>
         <div class="row mb-3">
           <div class="col-12">
