#3864: Richtiges Locale-Key verwenden

--- a/app/views/completions/desktop/_new.html.erb
+++ b/app/views/completions/desktop/_new.html.erb
@@ -10,7 +10,7 @@
         <%= t('.hint.text') %>
       </div>
       <div class="col-12 div-margin-top">
-        <em class="text-danger"><%= t('.hint.warning_html') %></em>
+        <em class="text-danger"><%= t('.hint.warning') %></em>
       </div>
     </div>
     <div class="row mb-3">
