Durchgängige Nutzung von I18n für Texte

--- a/app/views/confirmations/confirm_error.html.erb
+++ b/app/views/confirmations/confirm_error.html.erb
@@ -1,11 +1,9 @@
 <div class="" id="headline">
   <h3>
-    Fehler
+    <%= t 'confirmations.error' %>
   </h3>
 </div>
 
 <h2 class="text-center">
-  Ihre Bestätigung konnte leider nicht akzeptiert werden.
-  <br />
-  Möglicherweise wurde die Bestätigung bereits durchgeführt.
+  <%= sanitize t('.error_message') %>
 </h2>
