--- a/app/views/confirmations/revoke_error.html.erb
+++ b/app/views/confirmations/revoke_error.html.erb
@@ -1,9 +1,9 @@
 <div class="" id="headline">
   <h3>
-    Fehler
+    <%= t 'confirmations.error' %>
   </h3>
 </div>
 
 <h2 class="text-center">
-  Ihre Meldung konnte leider nicht gelöscht werden.
+  <%= t('.error_message') %>
 </h2>
