#28 WIP: Assets-Pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
               <% end -%>
             </div>
             <div class="col-2">
-              <%= image_tag Settings::Client.logo_url, id: 'logo2', class: 'img-fluid' %>
+              <%= image_tag image_path('logo.png'), id: 'logo2', class: 'img-fluid' %>
             </div>
           </div>
           <div class="row">
