Redmine #4095: Fehlverhalten bei Beobachtungsfeeds

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -152,7 +152,7 @@ $ ->
     false
 
   $(document).on 'click', '#btn-start, .btn-start', () ->
-    $('#requests.header-tab').trigger('click')
+    $('#requests.header-tab')[0].click()
     false
 
   $(document).on 'click', '.btn-continue', () ->
