Ticket #44: Dunkles Fadenkreuz

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -59,6 +59,9 @@
   font-weight: 900
   src: url(asset-path('fa-solid-900.ttf'))
   
+html
+  color-scheme: only light
+
 body
   font-family: 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
   font-size: 15px
