--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -17,17 +17,17 @@
 #= require jquery-ui
 #= require jquery-ui/widgets/autocomplete
 #= require jquery-ui/widgets/sortable
-#= require jquery.ui.touch-punch
+#= require jquery-ui-touch-punch
 #= require turbolinks
 #= require popper
 #= require bootstrap-sprockets
-#= require proj4js
+#= require proj4/dist/proj4
 #= require shariff.complete
 #= require_self
-#= require ol
-#= require ol-ext
-#= require d3-v4
-#= require billboard
+#= require ol/dist/ol
+#= require ol-ext/dist/ol-ext
+#= require d3/dist/d3
+#= require billboard.js/dist/billboard
 #= require_tree .
 
 window.KS ||= {}
