--- a/app/views/areas/_areas_form.html.erb
+++ b/app/views/areas/_areas_form.html.erb
@@ -21,7 +21,8 @@
       <div class="col-12">
         <div class="btn-group d-flex col-12">
           <%= link_to t('buttons.cancel'), [:areas, back: true], remote: true, class: 'btn btn-light btn-outline-secondary back col-6' %>
-          <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary col-6' %>
+          <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary col-6',
+                data: { context: @context } %>
         </div>
       </div>
     </div>
