--- a/app/views/requests/mobile/_request_form.html.erb
+++ b/app/views/requests/mobile/_request_form.html.erb
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
           <%= label_tag :description, Service.human_attribute_name(:group), class: 'col-12 col-form-label' %>
-          <div class="col-12"><%= service&.group&.name %></div>
+          <div class="col-12"><%= service&.group %></div>
         </div>
         <div class="form-group">
           <%= label_tag :description, Service.human_attribute_name(:service_name), class: 'col-12 col-form-label' %>
