Hinweise über nicht zu meldende Sachverhalte auf mobiler Startseite ergänzt

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -412,9 +412,15 @@ body.mobile
     background-color: #ffffff
     border-top: 0
 
-  .intro,
+  .intro
+    margin-bottom: 20px
+
+  .hints,
   .statistic
     margin-bottom: 50px
+
+  .hints
+    font-weight: bold
 
   #bs-navbar-collapse-1
     margin-left: 3px
