--- a/app/views/starts/_mobile.html.erb
+++ b/app/views/starts/_mobile.html.erb
@@ -6,6 +6,11 @@
             <%= t('.intro') %>
           </div>
         </div>
+        <div class="hints row">
+          <div class="col-12 text-center">
+            <%= t('.hints') %>
+          </div>
+        </div>
         <div class="row">
           <div class="col-12">
             <div class="statistic">
