Formatierung via Bootstrap Utility Helper

--- a/app/views/starts/_mobile.html.erb
+++ b/app/views/starts/_mobile.html.erb
@@ -7,7 +7,7 @@
           </div>
         </div>
         <div class="hints row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center fw-bold">
             <%= t('.hints') %>
           </div>
         </div>
