Ergänzung Hinweise über nicht zu meldende Sachverhalte auf mobiler Startseite (#103)
* Hinweise über nicht zu meldende Sachverhalte auf mobiler Startseite ergänzt
* Formatierung via Bootstrap Utility Helper

---------

Co-authored-by: Niels Bennke <bennke@bfpi.de>

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -412,7 +412,10 @@ body.mobile
     background-color: #ffffff
     border-top: 0
 
-  .intro,
+  .intro
+    margin-bottom: 20px
+
+  .hints,
   .statistic
     margin-bottom: 50px
 
